tests/failing/shape.tail
let v1:[char]1 = prArrC(['S','h','a','p','e',' ','o','f',' ','s','c','a','l','a','r']) in
let v2:<int>0 = zilde in
let v3:<int>0 = prArrI(v2) in
let v4:[char]1 = prArrC(['S','h','a','p','e',' ','o','f',' ','v','e','c','t','o','r']) in
let v7:[int]1 = zipWith{[int,int,int],[1]}(addi,shape{[int],[1]}(reshape{[int],[1,1]}([5],[4])),shape{[char],[1]}(['h','e','l','l','o'])) in
let v8:[int]1 = prArrI(v7) in
let v9:[char]1 = prArrC(['S','h','a','p','e',' ','o','f',' ','a','r','r','a','y']) in
let v12:[int]1 = zipWith{[int,int,int],[1]}(addi,shape{[int],[3]}(reshape{[int],[1,3]}([5,2,3],[4])),shape{[char],[3]}(reshape{[char],[1,3]}([5,2,3],['h','e','l','l','o']))) in
let v13:[int]1 = prArrI(v12) in
let v14:[char]1 = prArrC(['S','h','a','p','e',' ','o','f',' ','e','m','p','t','y',' ','a','r','r','a','y']) in
let v15:SV(int,0) = shapeV{['b0],[0]}(zilde) in
let v16:SV(int,0) = prArrI(v15) in
i2d(b2iV(ff))
